[package]
name = "dropxporter"
version = "0.1.0"
edition = "2021"
rust-version = "1.68.2"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

mimalloc-rust = "0.2.0"

reqwest = { version = "0.11.14", features = ["json", "rustls-tls"], default-features = false }
url = "2.3.1"

tokio = "1.27.0"
mydi = "0.1.2"
prometheus = "0.13.3"

async-trait = "0.1.68"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.93"


serde_yaml = "0.9.17"
regex = "1.7.1"

parking_lot = "0.12.1"

ahash = "0.8.3"

anyhow = "1.0.70"

chrono = "0.4.24"

tracing-subscriber = { version = "0.3.16", features = ["env-filter", "fmt", "json"] }
tracing = "0.1.37"
tracing-appender = "0.2.2"