[package]
name = "droxporter"
version = "0.1.1"
edition = "2024"
rust-version = "1.90.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3
lto = true


[dependencies]

reqwest = { version = "0.12.24", features = ["json", "rustls-tls"], default-features = false }
url = "2.5.6"
poem = { version = "3.1.12", features = ["anyhow", "rustls", "rustls-pemfile"] }
prometheus = { version = "0.14.0", features = [] }
sysinfo = "0.37.2"

tokio = { version = "1.48.0", features = ["full"] }
async-trait = "0.1.89"

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
humantime-serde = "1.1.1"
serde_yaml = "0.9.17"
regex = "1.12.2"

mimalloc-rust = "0.2.1"
parking_lot = { version = "0.12.5", features = ["arc_lock"] }
ahash = "0.8.12"

anyhow = "1.0.89"
chrono = { version = "0.4.42", features = ["serde"] }

tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt", "json"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"

[dev-dependencies]
tempfile = "3.4"
mockito = "1.7.0"
mockall = "0.13.1"